--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
-		"eslint-plugin-simple-import-sort": "^12.1.1",
-		"eslint-plugin-unicorn": "^54.0.0"
+		"eslint-plugin-simple-import-sort": "^12.1.1"
 	},
 	"peerDependencies": {
 		"eslint": "*",
