--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "1.0.0",
 	"main": "index.json",
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^7.15.0",
-		"@typescript-eslint/parser": "^7.15.0",
+		"@typescript-eslint/eslint-plugin": "^8.12.2",
+		"@typescript-eslint/parser": "^8.12.2",
 		"eslint-plugin-simple-import-sort": "^12.1.1"
 	},
 	"peerDependencies": {
-		"eslint": "*",
+		"eslint": "9.13.0",
 		"typescript": ">=4"
 	},
 	"devDependencies": {
